# python_django

Django_Cache/mysite/: log.txt
Django_Cache/mysite/mysite/: settings.py  urls.py
Django_Cache/mysite/shopapp/: sitemap.py  views.py
M_01_LinuxIntro/mysite/mysite/: settings.py
M_02_DjangoIntro/mysite/mysite/: settings.py
M_02_DjangoIntro/mysite/shopapp/: urls.py  views.py
M_03_DatabaseAndModels/mysite/shopapp/: models.py
M_04_DjangoAdmin/mysite/mysite/: settings.py
M_04_DjangoAdmin/mysite/shopapp/: admin_mixins.py  models.py  urls.py  views.py
M_05_RequestsAndMiddlewares/: README.md
M_05_RequestsAndMiddlewares/mysite/mysite/: settings.py
M_09_permissions/mysite/: db.sqlite3
M_11_Files/mysite/: db.sqlite3
M_12_i18n_l10n/: requirements.txt
M_12_i18n_l10n/mysite/: db.sqlite3
M_13_DRF/: requirements.txt
M_13_DRF/mysite/: db.sqlite3
M_14_Docs/: requirements.txt
M_15_queries/mysite/: db.sqlite3
M_17_logging/: .dockerignore  requirements.txt
import_export/: order_new.csv
import_export/mysite/: log.txt
logging/: docker-compose.yaml
logging/mysite/: db.sqlite3  log.txt
prod/: .env.template  Dockerfile  docker-compose.yaml  product_new.csv  pyproject.toml
prod/mysite/: shopapp-products-ficture.json
prod/mysite/blogapp/: urls.py
prod/mysite/blogapp/migrations/: 0001_initial.py  0003_alter_category_options_alter_tag_options.py
prod/mysite/blogapp/templates/blogapp/: article_list.html
prod/mysite/mysite/: settings.py
prod/mysite/shopapp/: urls.py  views.py
prod/mysite/shopapp/templates/shopapp/: shop-index.html
(+179 files in other folders)
