[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.0"
django-rest-framework = "^0.1.0"
django-filter = "^23.3"
django-debug-toolbar = "^4.2.0"
pillow = "^10.0.1"
gunicorn = "^21.2.0"
drf-spectacular = "^0.26.4"
sentry-sdk = "^1.31.0"
asgiref = "^3.7.2"
attrs = "^23.1.0"
inflection = "^0.5.1"
jsonschema = "^4.19.0"
jsonschema-specifications = "^2023.7.1"
pytz = "^2023.3.post1"
pyyaml = "^6.0.1"
referencing = "^0.30.2"
rpds-py = "^0.10.3"
sqlparse = "^0.4.4"
uritemplate = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
